# cortex

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  cli.py  config.py  cortex.py  demo.py  example_conversation.py  main.py  pyproject.toml  sample_conversation.json  tech_doc.txt  utils.py
classification/: rules.py
config/: pinecone.yaml
examples/: __init__.py  chat_example.py  hybrid_example.py  pinecone_example.py
memory/: __init__.py  conversation.py  episodic.py  preference.py  store.py
