[project]
name = "cortex-memory"
version = "0.1.0"
description = "Local-first conversation memory system with vector search"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Bejay Ketan Guin", email = "bejay.ketan1@gmail.com"}
]
keywords = ["memory", "conversation", "vector-search", "embeddings", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "python-dotenv>=1.1.1",
    "openai>=1.102.0",
]

[project.optional-dependencies]
chat = [
    "openai>=1.0.0",
    "python-dotenv>=1.1.1"
]
pinecone = [
    "pinecone-client>=2.2.0"
]

[project.urls]
Homepage = "https://github.com/BKG123/cortex"
Repository = "https://github.com/BKG123/cortex"
Documentation = "https://github.com/BKG123/cortex#readme"
"Bug Tracker" = "https://github.com/BKG123/cortex/issues"

[project.scripts]
cortex = "memory.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["memory*"]


